# Multi-Channel-Customer-Success-Agent

./: .gitignore  README.md  RUNBOOK.md
backend/: .dockerignore  Dockerfile  Dockerfile.worker  pyproject.toml
backend/agent/: customer_success_agent.py  embeddings.py  formatters.py  prompts.py  sentiment.py  tools.py
backend/api/: main.py
backend/api/routers/: conversations.py  customers.py  metrics.py  support_form.py  tickets.py
backend/channels/: gmail_auth.py  gmail_handler.py  whatsapp_handler.py
backend/context/: brand-voice.md  company-profile.md  sample-tickets.json
backend/core/: config.py  exceptions.py  logging.py
backend/database/: connection.py  queries.py  schema.sql
backend/kafka/: client.py  topics.py
backend/tests/: conftest.py  load_test.py  test_agent.py  test_channels.py
backend/workers/: daily_report.py  message_processor.py  metrics_collector.py
context/: escalation-rules.md  product-docs.md  sample-tickets.json
infra/: docker-compose.yml
infra/k8s/: configmap.yaml  deployment-api.yaml  deployment-worker.yaml  hpa.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  secrets.yaml  service.yaml
specs/: customer-success-fte-spec.md  discovery-log.md  skills-manifest.md  transition-checklist.md
web-portal/: Dockerfile  package-lock.json  package.json
web-portal/app/: globals.css  layout.tsx  page.tsx
web-portal/app/(admin)/dashboard/: page.tsx
web-portal/app/(public)/support/: page.tsx
web-portal/components/: Footer.tsx  Header.tsx
web-portal/lib/: api.ts  types.ts
(+1 files in other folders)
